New article "Streaming on LCTV", updated about.md

--- a/_posts/2015-02-20-git-tips.md
+++ b/_posts/2015-02-20-git-tips.md
@@ -19,7 +19,7 @@ Just typing this command makes you a git-rainbow-king:
 
     $ git config --global --add color.ui true
 
-#2. Numeric output in `git diff`
+#2. Numeric output in git diff
 Sometimes you want to see how many additions/deletions you've made since last commit. 
 This command does the work and proves that you're just lazy coder who eats cookies and drinks coffee:
 
